Сверстан блок PROMO

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -5,7 +5,42 @@
     <div class="page-wrapper">
       <header>HEADER</header>
 
-      <main></main>
+      <main>
+        <h1 class="visually-hidden">Фотограф в Севастополе - Главная</h1>
+        <section class="promo">
+          <div class="container">
+            <div class="promo__wrapper">
+              <img src="images/avatar250px.jpg" alt="Фотография" />
+              <div class="promo__description">
+                <h2 class="promo__title title">
+                  <span class="title title--small">Фотограф в Севастополе</span> <br />
+                  Данилова Анна
+                </h2>
+                <ul class="promo__contacts-list">
+                  <li class="promo__contact">
+                    <a class="promo__contact-link" href=" https://t.me/ann_blacksea" target="_blank"
+                      >t.me/ann_blacksea</a
+                    >
+                  </li>
+                  <li class="promo__contact">
+                    <a class="promo__contact-link" href="https://vk.com/annadi_ph" target="_blank"
+                      >vk.com/annadi_ph</a
+                    >
+                  </li>
+                  <li class="promo__contact">
+                    <a
+                      class="promo__contact-link"
+                      href="https://www.instagram.com/ann.blacksea"
+                      target="_blank"
+                      >instagram.com/ann.blacksea</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
 
       <!--=include footer.html -->
     </div>
