--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -40,6 +40,118 @@
             </div>
           </div>
         </section>
+
+        <section class="portfolio">
+          <h2 class="visually-hidden">Портфолио</h2>
+          <div class="container">
+            <div class="portfolio__wrapper slider">
+              <ul class="portfolio__list slider__list">
+                <li class="portfolio__item slider__item">
+                  <a class="portfolio__link series">
+                    <img class="series__img" src="images/series-1.jpg" alt="Девушка на пляже" />
+                    <h3 class="title portfolio__img-title series__title">Серия 1</h3>
+                  </a>
+                </li>
+                <li class="portfolio__item slider__item">
+                  <a class="portfolio__link series">
+                    <img
+                      class="series__img"
+                      src="images/series-2.jpg"
+                      alt="Парень, готовящийся к выступлению"
+                    />
+                    <h3 class="title portfolio__img-title series__title">Серия 2</h3>
+                  </a>
+                </li>
+              </ul>
+              <button class="portfolio__button portfolio__button--prev slider__button--prev">
+                <span class="visually-hidden">Предыдущий слайд</span>
+                <svg
+                  width="30px"
+                  height="30px"
+                  viewBox="0 0 32 32"
+                  version="1.1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"
+                >
+                  <title>arrow-left-circle</title>
+                  <desc>Created with Sketch Beta.</desc>
+                  <defs></defs>
+                  <g
+                    id="Page-1"
+                    stroke="none"
+                    stroke-width="1"
+                    fill="none"
+                    fill-rule="evenodd"
+                    sketch:type="MSPage"
+                  >
+                    <g
+                      id="Icon-Set-Filled"
+                      sketch:type="MSLayerGroup"
+                      transform="translate(-258.000000, -1089.000000)"
+                      fill="#000000"
+                    >
+                      <path
+                        d="M281,1106 L270.414,1106 L274.536,1110.12 C274.926,1110.51 274.926,1111.15 274.536,1111.54 C274.145,1111.93 273.512,1111.93 273.121,1111.54 L267.464,1105.88 C267.225,1105.64 267.15,1105.31 267.205,1105 C267.15,1104.69 267.225,1104.36 267.464,1104.12 L273.121,1098.46 C273.512,1098.07 274.145,1098.07 274.536,1098.46 C274.926,1098.86 274.926,1099.49 274.536,1099.88 L270.414,1104 L281,1104 C281.552,1104 282,1104.45 282,1105 C282,1105.55 281.552,1106 281,1106 L281,1106 Z M274,1089 C265.164,1089 258,1096.16 258,1105 C258,1113.84 265.164,1121 274,1121 C282.836,1121 290,1113.84 290,1105 C290,1096.16 282.836,1089 274,1089 L274,1089 Z"
+                        id="arrow-left-circle"
+                        sketch:type="MSShapeGroup"
+                      ></path>
+                    </g>
+                  </g>
+                </svg>
+              </button>
+              <button class="portfolio__button portfolio__button--next slider__button--next">
+                <span class="visually-hidden">Следующий слайд</span>
+                <svg
+                  width="30px"
+                  height="30px"
+                  viewBox="0 0 32 32"
+                  version="1.1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"
+                >
+                  <title>arrow-right-circle</title>
+                  <desc>Created with Sketch Beta.</desc>
+                  <defs></defs>
+                  <g
+                    id="Page-1"
+                    stroke="none"
+                    stroke-width="1"
+                    fill="none"
+                    fill-rule="evenodd"
+                    sketch:type="MSPage"
+                  >
+                    <g
+                      id="Icon-Set-Filled"
+                      sketch:type="MSLayerGroup"
+                      transform="translate(-310.000000, -1089.000000)"
+                      fill="#000000"
+                    >
+                      <path
+                        d="M332.535,1105.88 L326.879,1111.54 C326.488,1111.93 325.855,1111.93 325.465,1111.54 C325.074,1111.15 325.074,1110.51 325.465,1110.12 L329.586,1106 L319,1106 C318.447,1106 318,1105.55 318,1105 C318,1104.45 318.447,1104 319,1104 L329.586,1104 L325.465,1099.88 C325.074,1099.49 325.074,1098.86 325.465,1098.46 C325.855,1098.07 326.488,1098.07 326.879,1098.46 L332.535,1104.12 C332.775,1104.36 332.85,1104.69 332.795,1105 C332.85,1105.31 332.775,1105.64 332.535,1105.88 L332.535,1105.88 Z M326,1089 C317.163,1089 310,1096.16 310,1105 C310,1113.84 317.163,1121 326,1121 C334.837,1121 342,1113.84 342,1105 C342,1096.16 334.837,1089 326,1089 L326,1089 Z"
+                        id="arrow-right-circle"
+                        sketch:type="MSShapeGroup"
+                      ></path>
+                    </g>
+                  </g>
+                </svg>
+              </button>
+              <ul class="portfolio__dots slider__dots">
+                <li class="portfolio__dots-item slider__dots-item">
+                  <button class="portfolio__dot slider__dot">
+                    <span class="visually-hidden">Серия 1</span>
+                  </button>
+                </li>
+                <li class="portfolio__dots-item slider__dots-item">
+                  <button class="portfolio__dot slider__dot">
+                    <span class="visually-hidden">Серия 2</span>
+                  </button>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
       </main>
 
       <!--=include footer.html -->
