Сверстан блок PUBLICATIONS

--- a/app/index.html
+++ b/app/index.html
@@ -190,6 +190,111 @@
             </div>
           </div>
         </section>
+
+        <section class="publications">
+          <div class="container">
+            <h2 class="publications__title">Публикации</h2>
+            <ul class="publications__list">
+              <li class="publications__item publications__item--line1">
+                <a class="publications__link" href="#" title="Marika Magazine"
+                  ><img
+                    class="publications__img"
+                    src="images/publications/marika-frozen-cov.jpg"
+                    alt="Девушка в жемчуге"
+                /></a>
+              </li>
+              <li class="publications__item publications__item--line2">
+                <a class="publications__link" href="#" title="Agarimo mag"
+                  ><img
+                    class="publications__img"
+                    src="images/publications/agarimo-child-cov.jpg"
+                    alt="Девушка с леденцом во рту"
+                /></a>
+              </li>
+              <li class="publications__item publications__item--poster1">
+                <a class="publications__link" href="#" title="Marika Magazine"
+                  ><img
+                    class="publications__img"
+                    src="images/publications/marika-cover-cov.jpg"
+                    alt="Девушка с обложки"
+                /></a>
+              </li>
+              <li class="publications__item publications__item--poster2">
+                <a class="publications__link" href="#" title="Mob"
+                  ><img
+                    class="publications__img"
+                    src="images/publications/mob-serafima-cov.jpg"
+                    alt="Девушка на циклораме"
+                /></a>
+              </li>
+              <li class="publications__item publications__item--poster3">
+                <a class="publications__link" href="#" title="Mob"
+                  ><img
+                    class="publications__img"
+                    src="images/publications/mob-serafima-cov2.jpg"
+                    alt="Девушка темных очках"
+                /></a>
+              </li>
+
+              <li class="publications__item publications__item--poster4">
+                <a class="publications__link" href="#" title="Artells"
+                  ><img
+                    class="publications__img"
+                    src="images/publications/artells-arina-cov.jpg"
+                    alt="Девушка в телефонной будке"
+                /></a>
+              </li>
+              <li class="publications__item publications__item--poster5">
+                <a class="publications__link" href="#" title="Top Posters"
+                  ><img
+                    class="publications__img"
+                    src="images/publications/topposters-green-cov.jpg"
+                    alt="Фиолетовый макияж"
+                /></a>
+              </li>
+              <li class="publications__item publications__item--poster6">
+                <a class="publications__link" href="#" title="Top Posters"
+                  ><img
+                    class="publications__img"
+                    src="images/publications/topposters-masha-cov.jpg"
+                    alt="Девушка в рубашке"
+                /></a>
+              </li>
+              <li class="publications__item publications__item--poster7">
+                <a class="publications__link" href="#" title="Beyondall"
+                  ><img
+                    class="publications__img"
+                    src="images/publications/beyondall-arina-cov.jpg"
+                    alt="Девушка с платком на шее"
+                /></a>
+              </li>
+              <li class="publications__item publications__item--poster8">
+                <a class="publications__link" href="#" title="Beautica"
+                  ><img
+                    class="publications__img"
+                    src="images/publications/beautica-pearls-cov.jpg"
+                    alt="Рыжая девушка в белом"
+                /></a>
+              </li>
+              <li class="publications__item publications__item--line3">
+                <a class="publications__link" href="#" title="Artells"
+                  ><img
+                    class="publications__img"
+                    src="images/publications/artells-summer-cov.jpg"
+                    alt="Девушка, лежащая в цветах"
+                /></a>
+              </li>
+              <li class="publications__item publications__item--line4">
+                <a class="publications__link" href="#" title="Beautica"
+                  ><img
+                    class="publications__img"
+                    src="../images/publications/beautica-dream-cov.jpg"
+                    alt="Женские руки"
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </section>
       </main>
 
       <footer class="footer">FOOTER</footer>
