Сверстана UP-BUTTON

--- a/app/index.html
+++ b/app/index.html
@@ -297,7 +297,7 @@
         </section>
       </main>
 
-      <footer class="footer">FOOTER</footer>
+      <button class="up-button"></button>
 
       
     </div>
