--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -259,7 +259,7 @@
         </section>
       </main>
 
-      <!--=include footer.html -->
+      <!--=include up-button.html -->
     </div>
     <script src="js/main.min.js"></script>
   </body>
