Имплементация плавного всплывания секций

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
           </div>
         </section>
 
-        <section class="portfolio">
+        <section class="portfolio appearing-section">
           <h2 class="visually-hidden">Портфолио</h2>
           <div class="container">
             <div class="portfolio__wrapper slider">
@@ -191,7 +191,7 @@
           </div>
         </section>
 
-        <section class="publications">
+        <section class="publications appearing-section">
           <div class="container">
             <h2 class="publications__title">Публикации</h2>
             <ul class="publications__list">
