Имплементация функционала слайдера

--- a/app/index.html
+++ b/app/index.html
@@ -175,18 +175,10 @@
                   </g>
                 </svg>
               </button>
-              <ul class="portfolio__dots slider__dots">
-                <li class="portfolio__dots-item slider__dots-item">
-                  <button class="portfolio__dot slider__dot">
-                    <span class="visually-hidden">Серия 1</span>
-                  </button>
-                </li>
-                <li class="portfolio__dots-item slider__dots-item">
-                  <button class="portfolio__dot slider__dot">
-                    <span class="visually-hidden">Серия 2</span>
-                  </button>
-                </li>
-              </ul>
+              <div class="portfolio__dots slider__dots">
+                <button class="portfolio__dot slider__dot"></button>
+                <button class="portfolio__dot slider__dot"></button>
+              </div>
             </div>
           </div>
         </section>
