--- a/app/index.html
+++ b/app/index.html
@@ -83,25 +83,25 @@
           <h2 class="visually-hidden">Портфолио</h2>
           <div class="container">
             <div class="portfolio__wrapper slider">
-              <ul class="portfolio__list slider__list">
-                <li class="portfolio__item slider__item">
-                  <a class="portfolio__link series">
-                    <img class="series__img" src="images/series-1.jpg" alt="Девушка на пляже" />
-                    <h3 class="title portfolio__img-title series__title">Серия 1</h3>
+              <ul class="slider__list">
+                <li class="slider__item">
+                  <a class="slider__link">
+                    <img class="slider__img" src="images/series-1.jpg" alt="Девушка на пляже" />
+                    <h3 class="title slider__title">Серия 1</h3>
                   </a>
                 </li>
-                <li class="portfolio__item slider__item">
-                  <a class="portfolio__link series">
+                <li class="slider__item">
+                  <a class="slider__link">
                     <img
-                      class="series__img"
+                      class="slider__img"
                       src="images/series-2.jpg"
                       alt="Парень, готовящийся к выступлению"
                     />
-                    <h3 class="title portfolio__img-title series__title">Серия 2</h3>
+                    <h3 class="title slider__title">Серия 2</h3>
                   </a>
                 </li>
               </ul>
-              <button class="portfolio__button portfolio__button--prev slider__button--prev">
+              <button class="slider__button slider__button--prev">
                 <span class="visually-hidden">Предыдущий слайд</span>
                 <svg
                   width="30px"
@@ -138,7 +138,7 @@
                   </g>
                 </svg>
               </button>
-              <button class="portfolio__button portfolio__button--next slider__button--next">
+              <button class="slider__button slider__button--next">
                 <span class="visually-hidden">Следующий слайд</span>
                 <svg
                   width="30px"
@@ -175,10 +175,7 @@
                   </g>
                 </svg>
               </button>
-              <div class="portfolio__dots slider__dots">
-                <button class="portfolio__dot slider__dot"></button>
-                <button class="portfolio__dot slider__dot"></button>
-              </div>
+              <div class="slider__dots"></div>
             </div>
           </div>
         </section>
